fix spacing

--- a/src/components/Verses/BookmarksAndQuickLinks.module.scss
+++ b/src/components/Verses/BookmarksAndQuickLinks.module.scss
@@ -1,3 +1,4 @@
 .tabsContainer {
   margin-bottom: var(--spacing-medium);
+  padding-left: var(--flow-side-spacing, 0);
 }
